<resources>
    <string name="app_name">&appname; Drivers</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nudgespot_javascript_api_key">43cbec12b85957e2244f91af04cf238a</string>
    <string name="nudgespot_rest_api_key">90ea5fdd4d74c3e13b1059fdbebf15a1</string>
    <string name="fb_app_id">782131025144439</string>
    <string name="language_english_text">English</string>
    <string name="language_hindi_text">हिंदी</string>
    <string name="rupee">\u20B9</string>
    <string name="rupee_zero">\u20B9 0.0</string>
    <string name="rupee_100">\u20B9 100</string>
    <string name="rupee_200">\u20B9 200</string>
    <string name="rupee_500">\u20B9 500</string>
    <string name="rupee_zero_zero">\u20B9 0000.00</string>
    <string name="about_1_text">&appname; helps you provide a friendly and affordable ride within the Chandigarh tricity area.\nThe rates are affordable, and definitely a good deal when you get them for a friendly ride.</string>
    <string name="about_2_text">Rate card</string>
    <string name="digits_characters_numbers">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.\\ </string>
    <string name="email_id">Email ID</string>
    <string name="confirm_email_id">Confirm Email ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="save_to_favorite">Save To Favorite</string>
    <string name="enter_name_for_favorite">Enter Name for Favorite</string>
    <string name="ok">OK</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="check_your_registered_email_phone_number_for_otp">Check your registered email/phone number for OTP</string>
    <string name="enter_code">Enter Code</string>
    <string name="done">Done</string>
    <string name="amount">Amount</string>
    <string name="no_driver_available">No Driver Available</string>
    <string name="no_driver_available_message">Currently there are no drivers available nearby within 3km. We will look into it</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="select_language">Select Language</string>
    <string name="enter_phone_number">Enter Phone No.</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_email">Send Email</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorite_locations_added">No favorite locations added.</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="rides">Rides</string>
    <string name="no_rides_currently">No rides currently</string>
    <string name="history">History</string>
    <string name="missed">Missed</string>
    <string name="no_missed_rides_currently">No missed rides currently.</string>
    <string name="update">Update</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="jugnoo_on">&appname; ON</string>
    <string name="driver_type">Driver Type</string>
    <string name="ride_type">Ride Type</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="sos">SOS</string>
    <string name="language_preferences">Language Preferences</string>
    <string name="ride_in_progress">Ride in progress...</string>
    <string name="click_to_view">Click to view</string>
    <string name="start_ride">Start Ride</string>
    <string name="end_ride">End Ride</string>
    <string name="reached_destination">Reached Destination</string>
    <string name="distance">DISTANCE</string>
    <string name="wait_time">WAIT TIME</string>
    <string name="fare">Fare</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="request_ride">Request Ride</string>
    <string name="assigning_driver">Assigning driver...</string>
    <string name="no_drivers_nearby">No drivers nearby.</string>
    <string name="could_not_find_nearest_driver_distance">Could not find nearest driver\'s distance.</string>
    <string name="nearest_driver_is">Nearest driver is</string>
    <string name="away">away.</string>
    <string name="cancel_request_in">Cancel request in </string>
    <string name="your_ride_is">Your ride is </string>
    <string name="away_and_will_arrive"> away and will arrive in approximately </string>
    <string name="will_arrive_in">Will arrive in </string>
    <string name="call_driver">Call Driver</string>
    <string name="you_have">You have </string>
    <string name="ride_request"> ride request</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="rating"> Rating</string>
    <string name="call">Call</string>
    <string name="ride_time">RIDE TIME</string>
    <string name="start_wait">Start wait</string>
    <string name="stop_wait">Stop wait</string>
    <string name="submit">SUBMIT</string>
    <string name="search_results">Search results</string>
    <string name="search">Search</string>
    <string name="your_login_session_expired">Your Login session has expired. Please login again.</string>
    <string name="alert">Alert</string>
    <string name="start_ride_error">You must be present near the customer pickup location to start ride.</string>
    <string name="server_error">Server error. Please try again later.</string>
    <string name="server_not_responding">Oops!! Server not responding. Please try again later.</string>
    <string name="check_internet_message">Check your internet connection.</string>
    <string name="driver_id">Driver ID:</string>
    <string name="rank_city">City Rank:</string>
    <string name="rank_overall">Overall Rank:</string>
    <string name="monthly">Monthly Score</string>
    <string name="earnings">Earnings</string>
    <string name="rides_taken">Rides Taken</string>
    <string name="rides_missed">Rides Missed</string>
    <string name="rides_cancelled">Rides Cancelled</string>
    <string name="ride_cancelled">Ride Cancelled</string>
    <string name="online_hours">Online Hours</string>
    <string name="Auto_not_working">Auto is not working</string>
    <string name="Traffic">Traffic</string>
    <string name="accepted_by_mistake">Ride accepted by mistake</string>
    <string name="Customer_asked_to_cancel">Customer asked to cancel the ride</string>
    <string name="Not_able_to_contact_customer">Not able to contact customer</string>
    <string name="Customer_behavior">Customer\'s bad behavior</string>
    <string name="profile">PROFILE</string>
    <string name="Duty_Hours">Duty Hours:</string>
    <string name="call_us">Call Us</string>
    <string name="auto_number">Auto number</string>
    <string name="Choose_one">Choose one:</string>
    <string name="is_rented">I have a rented auto.</string>
    <string name="is_owned">I own my auto.</string>
    <string name="Documents">Documents</string>
    <string name="Document_type">Document type</string>
    <string name="Requirement">Requirement</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="Submit">Submit</string>
    <string name="check_all">Check All</string>
    <string name="uncheck_all">Uncheck All</string>
    <string name="add_cash">ADD CASH</string>
    <string name="add_customer_cash">ADD CUSTOMER CASH</string>
    <string name="arrived">Arrived</string>
    <string name="accept_subsidy">Accept Subsidy</string>
    <string name="account">Account</string>
    <string name="accept">ACCEPT</string>
    <string name="away_from_you">Away from you:</string>
    <string name="cancel_ride_text">Are you sure you want to cancel ride?</string>
    <string name="end_ride_text">Are you sure you want to end ride?</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="customer_pickup_text">A pickup has been assigned to you. Please pick the customer.</string>
    <string name="start_ride_text">Please confirm you have picked up customer : %s</string>
    <string name="battery_level_text">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
    <string name="battery_level_start_text">Battery Level must be greater than 10% to start the ride. Plugin to a power source to continue.</string>
    <string name="battery_level_arrived_text">Battery Level must be greater than 10% to to mark the ride arrived. Plugin to a power source to continue.</string>
    <string name="back">Back</string>
    <string name="change_phone_no_text">Changed Phone number is same as the previous one.</string>
    <string name="local_positon_text">Could not get local position</string>
    <string name="overall_position_text">Could not get overall position</string>
    <string name="convenience_charges_text">Convenience charges for customer: </string>
    <string name="code_empty">Code can\'t be empty</string>
    <string name="confirm_email_text">Confirm email id doesn\'t match</string>
    <string name="choose_email_client">Choose an Email app:</string>
    <string name="select_time_error_text">Cannot select time before current time</string>
    <string name="call_me">CALL ME</string>
    <string name="change_phone_no">CHANGE PHONE NUMBER</string>
    <string name="creating_game">Creating Game ...</string>
    <string name="completed">Completed</string>
    <string name="customer_name">Customer name: </string>
    <string name="change">CHANGE</string>
    <string name="km">Km</string>
    <string name="disable_mock_location">Disable mock location first</string>
    <string name="daily">Daily</string>
    <string name="distance2">Distance:\n</string>
    <string name="discount">Discount</string>
    <string name="enter_new_phone_no">Enter New Phone Number</string>
    <string name="enter_fare">ENTER FARE</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="email">Email:</string>
    <string name="fare1">Fare :</string>
    <string name="forgot_password_cap">FORGOT PASSWORD</string>
    <string name="free_ride">FREE RIDE</string>
    <string name="final_amount">Final Amount</string>
    <string name="fare2">Fare:\n</string>
    <string name="fare_details">Fare Details</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="google_pay_service_error">Google Play Services Error</string>
    <string name="login">Login</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="register">Register</string>
    <string name="take_cash">Take Cash </string>
    <string name="collected">Collected</string>
    <string name="Returned">Returned</string>
    <string name="to_no_colon">To</string>
    <string name="address">Address</string>
    <string name="order_no">Order No.</string>
    <string name="auto_driver_confirmation">Are you an auto driver?</string>
    <string name="auto_status_confirmation">Do you have an auto ?</string>
    <string name="estimated_payout">ESTIMATED PAYOUT</string>
    <string name="this_week_cap">THIS WEEK</string>
</resources>