<LinearLayout
    android:id="@+id/relative"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_centerHorizontal="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="15px"
        android:gravity="center">

        <ImageView
            android:layout_width="120px"
            android:layout_height="2px"
            android:id="@+id/imageViewHorizontal1"
            android:layout_centerVertical="true"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/textViewOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageViewHorizontal1"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="10px"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:text="Order Id: 0000000"
            android:textColor="@color/black"
            android:textSize="48px"/>

        <ImageView
            android:layout_width="120px"
            android:layout_height="2px"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textViewOrderId"
            android:id="@+id/imageViewHorizontal2"
            android:background="@color/black"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/textViewTakeCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72px"
        android:gravity="center"
        android:text="@string/take_cash"
        android:lineSpacingExtra="10px"
        android:maxHeight="800px"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:textColor="@color/black"
        android:textSize="40px"

        />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32px"
        android:gravity="center"
        android:text="Rs. 100"
        android:lineSpacingExtra="10px"
        android:maxHeight="800px"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:textColor="@color/black"
        android:textSize="108px"

        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="64px"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        android:layout_marginBottom="25px"
        android:layout_gravity="center"
        android:splitMotionEvents="false"
        >


        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
            android:id="@+id/btnReturned"
            android:layout_width="250px"
            android:layout_height="83px"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="280px"
            android:background="@drawable/new_orange_btn_selector_rounded"
            android:text="@string/Returned"
            android:textColor="@drawable/white_color_selector"
            android:textSize="@dimen/button_text_size"
            />

        <product.clicklabs.jugnoo.driver.utils.CustomButtonView
            android:id="@+id/btnCollected"
            android:layout_width="250px"
            android:layout_height="83px"
            android:padding="2px"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/new_menu_black_btn_selector_rounded"
            android:text="@string/collected"
            android:textColor="@drawable/white_color_selector"
            android:textSize="@dimen/button_text_size"
            />
    </RelativeLayout>



</LinearLayout>






