<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_grey_light_selector"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="28px"
        android:layout_marginTop="28px"
        android:layout_marginBottom="28px"
        android:layout_marginRight="38px"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewOrderId"
                android:layout_width="160px"
                android:layout_height="wrap_content"
                android:text="@string/order_no"
                android:textColor="@color/new_orange"
                android:textSize="@dimen/text_size_30"
                />

            <TextView
                android:id="@+id/textViewOrderIdValue"
                android:layout_width="280px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text="00000000000"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_30"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10px"
            >
            <TextView
                android:id="@+id/textViewCustomerName"
                android:layout_width="160px"
                android:layout_height="wrap_content"
                android:text="@string/to_no_colon"
                android:textColor="@color/new_orange"
                android:textSize="@dimen/text_size_30"
                />

            <TextView
                android:id="@+id/textViewCustomerNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text="Aneesh"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_30"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10px"
            >
            <TextView
                android:id="@+id/textViewCustomerDeliveryAddress"
                android:layout_width="160px"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/new_orange"
                android:textSize="@dimen/text_size_30"
                />

            <TextView
                android:id="@+id/textViewCustomerDeliveryAddressValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text="Madhya Marg, 28B, Sector 28, Chandigarh"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_30"
                />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/textViewOrderStatus"
        android:layout_width="206px"
        android:layout_height="58px"
        android:text="Delivered"
        android:textColor="@color/green_delivery"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size_30"
        android:background="@drawable/bg_white_dark1_r"
        android:gravity="center"
        android:layout_marginTop="20px"
        android:layout_marginRight="30px"
        />

    <ImageView
        android:layout_width="60px"
        android:layout_height="60px"
        android:background="@drawable/back_inv_btn_selector"
        android:rotation="180"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="6px"
        android:background="@drawable/shadow_down"
        android:layout_below="@+id/linearLayoutMain"/>

</RelativeLayout>
